--- a/demo/index.html
+++ b/demo/index.html
@@ -29,7 +29,7 @@
 </body>
 <script>
     const paperToast = document.querySelector('#result');
-    document.querySelector('myscript-common-element').addEventListener('myscript-common-element-result', function (event) {
+    document.querySelector('myscript-common-element').addEventListener('exported', function (event) {
         paperToast.text = 'Recognition object contains : ' + JSON.stringify(event.detail);
         paperToast.fitIn = paperToast.show();
     });
