--- a/demo/languages-selector-init.html
+++ b/demo/languages-selector-init.html
@@ -29,25 +29,22 @@
     </style>
 </head>
 <body touch-action="none">
-    <div id="waiting">myscript-languages-element will be loaded in 3 seconds with customs params.</div>
     <select id="language" disabled></select>
     <myscript-languages-element
-        host="cloud-internal-stable.visionobjects.com"
-        unloaded>
+        host="cloud-internal-stable.visionobjects.com">
     </myscript-languages-element>
 </body>
 <script>
     window.addEventListener("load", function (event) {
+        var languageSelect = document.getElementById('language');
+        var myscriptLanguagesElement = document.querySelector('myscript-languages-element');
         window.setTimeout(function () {
-            var waitingDiv = document.querySelector('#waiting');
-            waitingDiv.parentNode.removeChild(waitingDiv);
             console.log("All resources finished loading! Starting to init myscript-languages-element");
             var mycustomconfiguration = {
                 type: 'ANALYZER',
                 applicationKey: 'a8f991e2-994d-4f36-b61d-55f7ddf6f85d',
                 sortByValue: true
             };
-            var myscriptLanguagesElement = document.querySelector('myscript-languages-element');
             // Testing if attributes binding via DOM, setAttribute or direct object manipulation is working.
             myscriptLanguagesElement.setAttribute('type', mycustomconfiguration.type);
             myscriptLanguagesElement.applicationkey = mycustomconfiguration.applicationKey;
@@ -66,12 +63,11 @@
                     }
                 }
             };
-            myscriptLanguagesElement.unloaded = false;
+            myscriptLanguagesElement.unloaded = true;
             console.log("myscript-languages-element should be loaded");
 
             var currentLanguage = myscriptLanguagesElement.configuration.recognitionParams.v3.analyzerParameter.textParameter.language;
-            var languageSelect = document.getElementById('language');
-            myscriptLanguagesElement.addEventListener('myscript-languages-element-result', function (evt) {
+            myscriptLanguagesElement.addEventListener('change', function (evt) {
                 evt.detail.forEach(function (language) {
                     var selected = currentLanguage === language.value;
                     languageSelect.options[languageSelect.options.length] = new Option(language.description, language.value, selected, selected);
