--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -50,6 +50,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
     <template>
         <style>
             :host {
+                box-sizing: border-box;
                 display: block;
                 position: relative;
                 min-height: 200px;
@@ -66,18 +67,15 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
                 display: none !important;
             }
 
-            .buttons {
+            nav {
                 position: inherit;
                 float: left;
                 display: flex;
                 display: -webkit-flex;
                 z-index: 25;
-                background-color: transparent;
-                padding: 6px;
             }
 
             paper-fab {
-                z-index: 3;
                 margin: 6px;
             }
 
@@ -159,21 +157,26 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
         <div class="error-msg" hidden>MyScript recognition server is not reachable. Please reload once you are
             connected
         </div>
-        <template is="dom-if" if="[[ !unloaded ]]">
-            <div class="buttons" hidden="[[ hidebuttons ]]">
-                <paper-fab mini src="undo.svg" title="undo" on-tap="undo" disabled="[[ !canundo ]]"
-                           hidden="[[ disableundoredo ]]"></paper-fab>
-                <paper-fab mini src="redo.svg" title="redo" on-tap="redo" disabled="[[ !canredo ]]"
-                           hidden="[[ disableundoredo ]]"></paper-fab>
-                <paper-fab mini src="trash.svg" title="clear" on-tap="clear" disabled="[[ !canclear ]]"
-                           hidden="[[ disableclear ]]"></paper-fab>
-                <paper-fab mini src="send.svg" title="export" on-tap="askForExport" disabled="[[ !canexport ]]"
-                           hidden="[[ disableexport ]]"></paper-fab>
-                <paper-fab mini src="send.svg" title="typeset" on-tap="convert" disabled="[[ !canconvert ]]"
-                           hidden="[[ disableconvert ]]"></paper-fab>
-            </div>
+        <template is="dom-if" if="[[ !hidebuttons ]]">
+            <nav>
+                <paper-fab mini src="undo.svg" title="undo" on-tap="undo"
+                           disabled="[[ !canundo ]]" hidden="[[ disableundoredo ]]">
+                </paper-fab>
+                <paper-fab mini src="redo.svg" title="redo" on-tap="redo"
+                           disabled="[[ !canredo ]]" hidden="[[ disableundoredo ]]">
+                </paper-fab>
+                <paper-fab mini src="trash.svg" title="clear" on-tap="clear"
+                           disabled="[[ !canclear ]]" hidden="[[ disableclear ]]">
+                </paper-fab>
+                <paper-fab mini src="export.svg" title="export" on-tap="askForExport"
+                           disabled="[[ !canexport ]]" hidden="[[ disableexport ]]">
+                </paper-fab>
+                <paper-fab mini src="convert.svg" title="typeset" on-tap="convert"
+                           disabled="[[ !canconvert ]]" hidden="[[ disableconvert ]]">
+                </paper-fab>
+            </nav>
         </template>
-        <div id="editorDomElement" class="ms-editor" hidden="[[ detached ]]"></div>
+        <div id="editorDomElement" class="ms-editor"></div>
         <paper-toast class="fit-bottom"></paper-toast>
     </template>
     <script>
@@ -407,12 +410,24 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
                             notify: true
                         },
                         /**
-                         * True if recognition button could be displayed.
+                         * True if export button could be displayed.
                          * @private
                          * @type Boolean
                          * @default false
                          */
                         canexport: {
+                            type: Boolean,
+                            value: false,
+                            reflectToAttribute: true,
+                            notify: true
+                        },
+                        /**
+                         * True if convert button could be displayed.
+                         * @private
+                         * @type Boolean
+                         * @default false
+                         */
+                        canconvert: {
                             type: Boolean,
                             value: false,
                             reflectToAttribute: true,
@@ -452,7 +467,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
                         disableexport: {
                             type: Boolean,
                             reflectToAttribute: true,
-                            value: true
+                            value: false
                         },
                         /**
                          * True if the convert feature is disabled, false otherwise
@@ -460,7 +475,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
                         disableconvert: {
                             type: Boolean,
                             reflectToAttribute: true,
-                            value: true
+                            value: false
                         },
                         /**
                          * Exports.
@@ -504,9 +519,9 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
                     /**
                      * Launch recognition
                      */
-                    askForExport: function () {
+                    askForExport: function (exports) {
                         if (this.editor) {
-                            this.editor.askForExport();
+                            this.editor.askForExport(exports);
                         }
                     },
                     /**
@@ -625,7 +640,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
                                         commonElement.canundo = event.detail.canUndo;
                                         commonElement.canredo = event.detail.canRedo;
                                         commonElement.canexport = event.detail.canUndo && event.detail.canClear;
-                                        commonElement.canconvert = event.detail.canUndo && event.detail.canClear;
+                                        commonElement.canconvert = this.apiVersion === 'V4' && event.detail.canUndo && event.detail.canClear;
                                     }
                                 }
                                     break;
