--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -640,7 +640,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
                                         commonElement.canundo = event.detail.canUndo;
                                         commonElement.canredo = event.detail.canRedo;
                                         commonElement.canexport = event.detail.canUndo && event.detail.canClear;
-                                        commonElement.canconvert = this.apiVersion === 'V4' && event.detail.canUndo && event.detail.canClear;
+                                        commonElement.canconvert = commonElement.apiversion === 'V4' && event.detail.canUndo && event.detail.canClear;
                                     }
                                 }
                                     break;
