[FIX] fixes convert label

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -171,7 +171,7 @@ The `myscript-common-element` is a web component wrapper around MyScriptJS edito
                 <paper-fab mini src="export.svg" title="export" on-tap="askForExport"
                            disabled="[[ !canexport ]]" hidden="[[ disableexport ]]">
                 </paper-fab>
-                <paper-fab mini src="convert.svg" title="typeset" on-tap="convert"
+                <paper-fab mini src="convert.svg" title="convert" on-tap="convert"
                            disabled="[[ !canconvert ]]" hidden="[[ disableconvert ]]">
                 </paper-fab>
             </nav>
