--- a/demo/languages.html
+++ b/demo/languages.html
@@ -31,8 +31,9 @@
 <body touch-action="none">
     <select id="language" disabled></select>
     <myscript-languages-element scheme="https"
-                                host="cloud-internal-stable.visionobjects.com"
-                                applicationkey="a8f991e2-994d-4f36-b61d-55f7ddf6f85d"
+                                host="webdemoapi.myscript.com"
+                                applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
+                                hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
                                 sortByValue>
     </myscript-languages-element>
 </body>
