--- a/demo/change-non-mutable-attribute.html
+++ b/demo/change-non-mutable-attribute.html
@@ -8,23 +8,24 @@
     <title>myscript-common-element demo - displaying then changing a non mutable attribute with unloaded
         property.</title>
 
+    <link rel="stylesheet" href="demo.css">
+
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../myscript-common-element.html">
-    <link rel="stylesheet" href="demo.css">
 </head>
 <body touch-action="none">
     <myscript-common-element
+        type="MATH"
         host="webdemoapi.myscript.com"
         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
-        hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
-        type="MATH">
+        hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
     </myscript-common-element>
 </body>
 <script>
     window.addEventListener("load", function () {
-        var myscriptCommonElement = document.querySelector('myscript-common-element');
+        var commonElement = document.querySelector('myscript-common-element');
         console.log("All resources finished loading! Unloading myscript-common-element");
-        myscriptCommonElement.configuration = {
+        commonElement.configuration = {
             recognitionParams: {
                 v3: {
                     mathParameter: {
@@ -33,7 +34,7 @@
                 }
             }
         };
-        myscriptCommonElement.unloaded = true;
+        commonElement.unloaded = true;
     });
 </script>
 </html>
