--- a/demo/iink_preview.html
+++ b/demo/iink_preview.html
@@ -5,7 +5,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-common-element init error demo</title>
+    <title>myscript-common-element iink preview</title>
 
     <link rel="stylesheet" href="demo.css">
 
@@ -15,9 +15,13 @@
 <body touch-action="none">
     <myscript-common-element
         type="MATH"
-        protocol="REST"
-        host="thisisnotanhost"
-        hmackey="WRONG">
+        protocol="WEBSOCKET"
+        apiversion="V4"
+        host="iinkpreview.myscript.com"
+        applicationkey="7d223f9e-a3cb-4213-ba4b-85e930605f8b"
+        hmackey="f35a21d1-aae3-4b98-8c5e-11e146e82130"
+        strokecolor="#000000"
+        strokewidth="2">
     </myscript-common-element>
 </body>
 </html>
