[DEV] Update customstyle demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,12 @@
     <link rel="import" href="../../paper-toast/paper-toast.html">
     <link rel="import" href="../myscript-common-element.html">
 </head>
+<style is="custom-style">
+    paper-toast {
+        --paper-toast-background-color: #1A9FFF;
+        --paper-toast-color: white;
+    }
+</style>
 <body touch-action="none">
     <paper-toast class="fit-top"></paper-toast>
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
