--- a/demo/languages-selector-init.html
+++ b/demo/languages-selector-init.html
@@ -24,17 +24,17 @@
         var languagesElement = document.querySelector('myscript-languages-element');
         window.setTimeout(function () {
             console.log("All resources finished loading! Starting to init myscript-languages-element");
-            var mycustomconfiguration = {
+            var configuration = {
                 type: 'ANALYZER',
                 applicationKey: '515131ab-35fa-411c-bb4d-3917e00faf60',
                 hmacKey: '54b2ca8a-6752-469d-87dd-553bb450e9ad',
                 sortByValue: true
             };
             // Testing if attributes binding via DOM, setAttribute or direct object manipulation is working.
-            languagesElement.setAttribute('type', mycustomconfiguration.type);
-            languagesElement.applicationkey = mycustomconfiguration.applicationKey;
-            languagesElement.hmackey = mycustomconfiguration.hmacKey;
-            languagesElement.sortByValue = mycustomconfiguration.sortByValue;
+            languagesElement.setAttribute('type', configuration.type);
+            languagesElement.applicationkey = configuration.applicationKey;
+            languagesElement.hmackey = configuration.hmacKey;
+            languagesElement.sortByValue = configuration.sortByValue;
             // Testing if configuration are taken into account
             languagesElement.configuration = {
                 recognitionParams: {
