--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -48,6 +48,7 @@
         <style>
             :host {
                 box-sizing: border-box;
+                touch-action: none;
                 display: block;
                 position: relative;
                 min-height: 200px;
