--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -51,7 +51,7 @@
             :host {
                 --myscript-common-element-background: none;
                 --myscript-common-element-color: #FFFFFF;
-                --myscript-common-element-line-pattern: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxOCIgaGVpZ2h0PSIxOCIgdmlld0JveD0iMCAwIDE4IDE4Ij4KICA8cGF0aCBzdHJva2U9IiNGNUY2RjciIGQ9Ik0wLjUsMCBMMC41LDE4IE0wLDAuNSBMMTgsMC41Ii8+Cjwvc3ZnPgo=);
+                --myscript-common-element-line-pattern: url(data:image/svg+xml;charset=utf8;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxOCIgaGVpZ2h0PSIxOCIgdmlld0JveD0iMCAwIDE4IDE4Ij4KICA8cGF0aCBzdHJva2U9IiNGNUY2RjciIGQ9Ik0wLjUsMCBMMC41LDE4IE0wLDAuNSBMMTgsMC41Ii8+Cjwvc3ZnPgo=);
                 --myscript-common-element-loader-background: #1A9FFF;
                 --myscript-common-element-loader-color: #F5F6F7;
                 --myscript-common-element-button-background: #1A9FFF;
@@ -161,11 +161,6 @@
                 100% {
                     -webkit-transform: rotate(360deg);
                 }
-            }
-
-            @font-face {
-                font-family: segoe ui;
-                src: url(../myscript/dist/fonts/diagram/segoeui.otf);
             }
 
             @font-face {
@@ -660,6 +655,7 @@
                         this.attachListener(this);
 
                         this.editor = MyScript.register(this.editorDomElement, this.buildConfiguration(), this.buildCustomStyle());
+                        this.scopeSubtree(this.editorDomElement, true);
                         this.configuration = this.editor.configuration;
 
                         this.logger.info('common-element attached');
