[DOC] Add demo samples

--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -14,7 +14,13 @@
         hmackey="YOUR MYSCRIPT CDK HMAC KEY">
     </myscript-common-element>
 
-@demo
+@demo demo/customstyle.html
+@demo demo/debug.html
+@demo demo/iink_preview.html
+@demo demo/init_error.html
+@demo demo/programmatic-init.html
+@demo demo/shadow_dom.html
+@demo demo/stats.html
 -->
 <dom-module id="myscript-common-element">
     <style>
