--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -14,14 +14,6 @@
         hmackey="YOUR MYSCRIPT CDK HMAC KEY">
     </myscript-common-element>
 
-@demo demo/customstyle.html Customize your component
-@demo demo/debug.html Debug your component
-@demo demo/iink_preview.html IInk preview
-@demo demo/index.html Get started
-@demo demo/init-error.html Display initialization error
-@demo demo/programmatic-init.html Programmatic initialization
-@demo demo/stats.html Get statistics
-
 ### Styling
 
 `<myscript-common-element>` provides the following custom properties for styling:
@@ -31,11 +23,19 @@ Custom property | Description | Default
 `--myscript-common-element-background` | Background of the editor | none
 `--myscript-common-element-color` | Color of the editor | #FFFFFF
 `--myscript-common-element-line-pattern` | Line pattern to apply on the editor | Classic notebook pattern
-`--myscript-common-element-loader-background` | Primary background color of the loader | #1A9FFF
-`--myscript-common-element-loader-color` | Secondary background color of the loader | #F5F6F7
-`--myscript-common-element-button-background` | Buttons background color | #1A9FFF
-`--myscript-common-element-button-focus-background` | Buttons focus background color | #1A9FFF
-`--myscript-common-element-button-disabled-background` | Buttons disabled background color | #F5F6F7
+`--myscript-common-element-loader-background` | Background of the loader | #1A9FFF
+`--myscript-common-element-loader-color` | Color of the loader | #F5F6F7
+`--myscript-common-element-button-background` | Buttons background | #1A9FFF
+`--myscript-common-element-button-focus-background` | Buttons focus background | #1A9FFF
+`--myscript-common-element-button-disabled-background` | Buttons disabled background | #F5F6F7
+
+@demo demo/customstyle.html Customize your component
+@demo demo/debug.html Debug your component
+@demo demo/iink_preview.html IInk preview
+@demo demo/index.html Get started
+@demo demo/init-error.html Display initialization error
+@demo demo/programmatic-init.html Programmatic initialization
+@demo demo/stats.html Get statistics
 -->
 <dom-module id="myscript-common-element">
     <style>
