[DEV] Split v3 and v4 samples

--- a/demo/v3/programmatic-init.html
+++ b/demo/v3/programmatic-init.html
@@ -8,10 +8,10 @@
 
     <title>myscript-common-element demo</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../myscript-common-element.html">
+    <link rel="import" href="../../myscript-common-element.html">
 </head>
 <body>
     <myscript-common-element
