--- a/demo/v3/customstyle.html
+++ b/demo/v3/customstyle.html
@@ -8,10 +8,10 @@
 
     <title>myscript-common-element basic demo</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../myscript-common-element.html">
+    <link rel="import" href="../../myscript-common-element.html">
     <custom-style>
         <style>
             myscript-common-element {
