--- a/demo/v3/init-error.html
+++ b/demo/v3/init-error.html
@@ -6,23 +6,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-common-element iink preview</title>
+    <title>myscript-common-element init error demo</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../myscript-common-element.html">
+    <link rel="import" href="../../myscript-common-element.html">
 </head>
 <body>
     <myscript-common-element
         type="MATH"
-        protocol="WEBSOCKET"
-        apiversion="V4"
-        host="newcloud.myscript.com"
-        applicationkey="7d223f9e-a3cb-4213-ba4b-85e930605f8b"
-        hmackey="5ab1935e-529a-4d48-a695-158450e52b13"
-        strokecolor="#000000"
-        strokewidth="2">
+        protocol="REST"
+        host="thisisnotanhost"
+        hmackey="WRONG">
     </myscript-common-element>
 </body>
 </html>
