--- a/demo/v3/languages.html
+++ b/demo/v3/languages.html
@@ -8,10 +8,10 @@
 
     <title>myscript-languages-element demo</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../myscript-languages-element.html">
+    <link rel="import" href="../../myscript-languages-element.html">
 </head>
 <body>
     <select id="language" disabled></select>
