--- a/demo/v3/shadow_dom.html
+++ b/demo/v3/shadow_dom.html
@@ -1,4 +1,9 @@
 <!doctype html>
+<!----------------------------------------------------------------------------------->
+<!--*******************************   WARNING   ************************************-->
+<!-- This sample is not currently working. The style is not import from MyScriptJS -->
+<!--*******************************   WARNING   ************************************-->
+<!----------------------------------------------------------------------------------->
 <html>
 <head>
     <meta charset="utf-8">
@@ -6,24 +11,21 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-common-element basic demo</title>
+    <title>myscript-common-element demo</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../../paper-toast/paper-toast.html">
-    <link rel="import" href="../myscript-common-element.html">
+    <script>
+        /* this script must run before Polymer is imported */
+        window.Polymer = {
+            dom: 'shadow',
+            lazyRegister: true
+        };
+    </script>
+    <link rel="import" href="../../myscript-common-element.html">
 </head>
-<custom-style>
-    <style>
-        paper-toast {
-            --paper-toast-background-color: #1A9FFF;
-            --paper-toast-color: white;
-        }
-    </style>
-</custom-style>
 <body>
-    <paper-toast class="fit-top"></paper-toast>
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
     <myscript-common-element
         type="SHAPE"
@@ -32,11 +34,4 @@
         hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
     </myscript-common-element>
 </body>
-<script>
-    const paperToast = document.querySelector('paper-toast');
-    document.querySelector('myscript-common-element').addEventListener('exported', function (event) {
-        paperToast.text = 'Recognition object contains : ' + JSON.stringify(event.detail);
-        paperToast.fitIn = paperToast.show();
-    });
-</script>
 </html>
