--- a/demo/v3/stats.html
+++ b/demo/v3/stats.html
@@ -8,11 +8,11 @@
 
     <title>myscript-common-element basic demo</title>
 
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="../../paper-toast/paper-toast.html">
-    <link rel="import" href="../myscript-common-element.html">
+    <link rel="import" href="../../myscript-common-element.html">
 </head>
 <custom-style>
     <style>
@@ -26,8 +26,7 @@
     <paper-toast class="fit-top"></paper-toast>
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
     <myscript-common-element
-        debug
-        type="SHAPE"
+        type="MATH"
         host="webdemoapi.myscript.com"
         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
         hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
@@ -35,8 +34,8 @@
 </body>
 <script>
     const paperToast = document.querySelector('paper-toast');
-    document.querySelector('myscript-common-element').addEventListener('exported', function (event) {
-        paperToast.text = 'Recognition object contains : ' + JSON.stringify(event.detail);
+    document.querySelector('myscript-common-element').addEventListener('change', function (event) {
+        paperToast.text = 'Stats for this input are : ' + JSON.stringify(document.querySelector('myscript-common-element').getStats());
         paperToast.fitIn = paperToast.show();
     });
 </script>
