[DEV] refactor demo and create an index

--- a/demo/styling.html
+++ b/demo/styling.html
@@ -6,12 +6,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-common-element basic demo</title>
+    <title>Styling</title>
 
-    <link rel="stylesheet" href="../demo.css">
+    <link rel="stylesheet" href="demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../../myscript-common-element.html">
+    <link rel="import" href="../myscript-common-element.html">
     <custom-style>
         <style>
             myscript-common-element {
@@ -30,7 +30,7 @@
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
     <myscript-common-element
         type="MATH"
-        host="webdemoapi.myscript.com"
+        host="trsd"
         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
         hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
         strokecolor="white"
