--- a/demo/debug.html
+++ b/demo/debug.html
@@ -1,9 +1,4 @@
 <!doctype html>
-<!----------------------------------------------------------------------------------->
-<!--*******************************   WARNING   ************************************-->
-<!-- This sample is not currently working. The style is not import from MyScriptJS -->
-<!--*******************************   WARNING   ************************************-->
-<!----------------------------------------------------------------------------------->
 <html>
 <head>
     <meta charset="utf-8">
@@ -11,23 +6,17 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-common-element demo</title>
+    <title>Activate debugger</title>
 
-    <link rel="stylesheet" href="../demo.css">
+    <link rel="stylesheet" href="demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <script>
-        /* this script must run before Polymer is imported */
-        window.Polymer = {
-            dom: 'shadow',
-            lazyRegister: true
-        };
-    </script>
-    <link rel="import" href="../../myscript-common-element.html">
+    <link rel="import" href="../myscript-common-element.html">
 </head>
 <body>
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
     <myscript-common-element
+        debug
         type="SHAPE"
         host="webdemoapi.myscript.com"
         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
