--- a/demo/get_languages.html
+++ b/demo/get_languages.html
@@ -6,20 +6,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-languages-element demo</title>
+    <title>Get available languages</title>
 
-    <link rel="stylesheet" href="../demo.css">
+    <link rel="stylesheet" href="demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../../myscript-languages-element.html">
+    <link rel="import" href="../myscript-languages-element.html">
 </head>
 <body>
     <select id="language" disabled></select>
     <myscript-languages-element scheme="https"
                                 host="webdemoapi.myscript.com"
                                 applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
-                                hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
-                                sortByValue>
+                                hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
     </myscript-languages-element>
 </body>
 <script>
