--- a/demo/get_languages_programmatic.html
+++ b/demo/get_languages_programmatic.html
@@ -6,12 +6,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-languages-element demo</title>
+    <title>Get available languages programmatically</title>
 
-    <link rel="stylesheet" href="../demo.css">
+    <link rel="stylesheet" href="demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../../myscript-languages-element.html">
+    <link rel="import" href="../myscript-languages-element.html">
 </head>
 <body>
     <select id="language" disabled></select>
