--- a/demo/get_started.html
+++ b/demo/get_started.html
@@ -6,19 +6,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-common-element init error demo</title>
+    <title>Get started</title>
 
-    <link rel="stylesheet" href="../demo.css">
+    <link rel="stylesheet" href="demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../../myscript-common-element.html">
+    <link rel="import" href="../myscript-common-element.html">
 </head>
 <body>
     <myscript-common-element
-        type="MATH"
-        protocol="REST"
-        host="thisisnotanhost"
-        hmackey="WRONG">
+        type="SHAPE"
+        host="webdemoapi.myscript.com"
+        applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
+        hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
     </myscript-common-element>
 </body>
 </html>
