--- a/demo/handle_exports.html
+++ b/demo/handle_exports.html
@@ -6,28 +6,19 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-common-element basic demo</title>
+    <title>Handle exports</title>
 
-    <link rel="stylesheet" href="../demo.css">
+    <link rel="stylesheet" href="demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
     <link rel="import" href="../../paper-toast/paper-toast.html">
-    <link rel="import" href="../../myscript-common-element.html">
+    <link rel="import" href="../myscript-common-element.html">
 </head>
-<custom-style>
-    <style>
-        paper-toast {
-            --paper-toast-background-color: #1A9FFF;
-            --paper-toast-color: white;
-        }
-    </style>
-</custom-style>
 <body>
     <paper-toast class="fit-top"></paper-toast>
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
     <myscript-common-element
-        debug
-        type="SHAPE"
+        type="MATH"
         host="webdemoapi.myscript.com"
         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
         hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
