--- a/demo/v4_configuration.html
+++ b/demo/v4_configuration.html
@@ -6,12 +6,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <title>myscript-common-element iink preview</title>
+    <title>Configure v4 api</title>
 
-    <link rel="stylesheet" href="../demo.css">
+    <link rel="stylesheet" href="demo.css">
 
     <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
-    <link rel="import" href="../../myscript-common-element.html">
+    <link rel="import" href="../myscript-common-element.html">
 </head>
 <body>
     <myscript-common-element
