--- a/demo/styling.html
+++ b/demo/styling.html
@@ -16,6 +16,7 @@
         <style>
             myscript-common-element {
                 --myscript-common-element-background: url(https://farm6.staticflickr.com/5526/10976824044_aebaebdb12_z_d.jpg);
+                --myscript-common-element-color: #ff7314;
                 --myscript-common-element-line-pattern: none;
                 --myscript-common-element-loader-background: #ff7314;
                 --myscript-common-element-loader-color: #F5F6F7;
@@ -30,7 +31,7 @@
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
     <myscript-common-element
         type="MATH"
-        host="trsd"
+        host="webdemoapi.myscript.com"
         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
         hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad"
         strokecolor="white"
