Revert "[DEV] Use CSS variables instead of HTML tags to custom common-element"
This reverts commit 26f7ae02e9e0dac7e6c0fb523c8699815f59766c.

--- a/demo/get_languages.html
+++ b/demo/get_languages.html
@@ -15,7 +15,7 @@
     <custom-style>
         <style>
             myscript-languages-element {
-                --myscript-languages-element-display: initial; /** Not displayed by default **/
+                --myscript-languages-element-display: block; /** Not displayed by default **/
             }
         </style>
     </custom-style>
