--- a/demo/styling.html
+++ b/demo/styling.html
@@ -23,8 +23,6 @@
                 --myscript-common-element-button-background: #ff7314;
                 --myscript-common-element-button-focus-background: #ff7314;
                 --myscript-common-element-button-disabled-background: #060903;
-                --myscript-common-element-export-display: none;
-                --myscript-common-element-convert-display: none;
             }
         </style>
     </custom-style>
@@ -32,7 +30,7 @@
 <body>
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
     <myscript-common-element
-        type="SHAPE"
+        type="MATH"
         scheme="https"
         host="webdemoapi.myscript.com"
         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
