--- a/demo/styling.html
+++ b/demo/styling.html
@@ -30,7 +30,7 @@
 <body>
     <!-- Please change applicationkey and hmackey below with those send by mail during your registration. You can re-access them by connecting to your dashboard at developer.myscript.com with your myscript account -->
     <myscript-common-element
-        type="MATH"
+        type="SHAPE"
         scheme="https"
         host="webdemoapi.myscript.com"
         applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
