--- a/myscript-common-element.html
+++ b/myscript-common-element.html
@@ -72,6 +72,7 @@ Custom property | Description | Default
                 --myscript-common-element-background: none;
                 --myscript-common-element-color: #1A9FFF;
                 --myscript-common-element-line-pattern: url(data:image/svg+xml;charset=utf8;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxOCIgaGVpZ2h0PSIxOCIgdmlld0JveD0iMCAwIDE4IDE4Ij4KICA8cGF0aCBzdHJva2U9IiNGNUY2RjciIGQ9Ik0wLjUsMCBMMC41LDE4IE0wLDAuNSBMMTgsMC41Ii8+Cjwvc3ZnPgo=);
+                --myscript-common-element-capture-background: none;
                 --myscript-common-element-loader-background: #1A9FFF;
                 --myscript-common-element-loader-color: #F5F6F7;
                 --myscript-common-element-button-background: #1A9FFF;
@@ -132,6 +133,11 @@ Custom property | Description | Default
             .ms-editor svg {
                 z-index: 10;
                 background: var(--myscript-common-element-line-pattern);
+            }
+
+            .ms-editor canvas.ms-capture-canvas,
+            .ms-editor svg {
+                background: var(--myscript-common-element-capture-background);
             }
 
             .error-msg {
